# rocm-trace-lite

./: .gitignore  LICENSE  MANIFEST.in  Makefile  PLANNING.md  README.md  REVIEW.md  build_wheel.sh  pyproject.toml  setup.py
.claude/: CLAUDE.md
benchmarks/: Makefile  analyze.py  overhead_bench.py
docker/: Dockerfile.hip-profiler  build-hip-profiler.sh
docs/: ADR-001-hipgraph-safety.md  RFC-002-hip-profiling-mode.md  changelog.md  cli_reference.md  comparison.md  conf.py  contributing.md  how_it_works.md  index.rst  installation.md  multi_gpu.md  output_format.md  perfetto.md  quickstart.md  requirements.txt  tutorial_roctx.md
examples/: trace_matmul.py
profiler_perf_bench/: README.md  __init__.py  cli.py  metrics.py  report.py  runner.py  sanity.py
repro/: Makefile  repro_README.md  repro_hipgraph_stress.hip  repro_passthrough_lib.cpp
rocm_trace_lite/: __init__.py  _build.py  cli.py  cmd_convert.py  cmd_convert_rocprofv3.py  cmd_info.py  cmd_summary.py  cmd_trace.py
src/: hip_api_intercept.cpp  hip_api_intercept.h  hip_intercept.cpp  hsa_intercept.cpp  roctx_shim.cpp  rpd_lite.cpp  rpd_lite.h  trace_db.cpp  trace_db.h
tests/: conftest.py  diagnose_trace.py  gpu_workload.hip  hipgraph_repro.hip  repro_tp_multiprocess.py  test_boundary.py  test_cli.py  test_cli_multistream.py  test_combined_e2e.py  test_completion_worker.py  test_correlation.py  test_e2e_hip_api.py  test_embedded_callback.py  test_error_handling.py  test_gpu_combo.py  test_gpu_hip.py  test_gpu_hip_api.py  test_gpu_multithread.py  test_gpu_single_dim.py  test_hip_api_intercept.py  (+16 more)
(+66 files in other folders)
