[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocm-trace-lite"
version = "0.3.6"
description = "Self-contained GPU kernel profiler for ROCm. Zero roctracer dependency."
license = {text = "MIT"}
requires-python = ">=3.8"

[project.scripts]
rtl-legacy = "rocm_trace_lite.cli:main"
rtl = "rocm_trace_lite.cli:main"
profiler-bench = "profiler_perf_bench.cli:main"

[tool.setuptools.packages.find]
include = ["rocm_trace_lite*", "profiler_perf_bench*"]

[tool.setuptools.package-data]
rocm_trace_lite = ["lib/*.so"]
